[package]
name                   = "rocketmq-common"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
readme                 = "README.md"
description            = "Rust implementation of Apache rocketmq common"
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default  = []
async_fs = ["tokio/fs"]
simd     = ["simd-json"]

[dependencies]
rocketmq-rust  = { workspace = true }
rocketmq-error = { workspace = true, features = ["with_serde", "with_config"] }

anyhow.workspace = true
tokio.workspace  = true

tracing.workspace            = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true

crc = "3.4.0"

#json spupport
serde.workspace      = true
serde_json.workspace = true
simd-json            = { version = "0.17.0", optional = true }
num_cpus.workspace   = true

#futures
futures = { version = "0.3", features = ["default", "thread-pool"] }

bytes.workspace = true


config.workspace = true

#tools
dirs.workspace = true

flate2    = { version = "1.1.7", features = ["zlib"], default-features = false }
lz4_flex  = { version = "0.12", default-features = false }
zstd      = "0.13"
byteorder = "1.5.0"

local-ip-address = "0.6.8"
chrono           = "0.4.42"
chrono-tz        = "0.10.4"
time             = "0.3.44"
iana-time-zone   = "0.1"

parking_lot             = { workspace = true }
once_cell               = { workspace = true }
tempfile                = "3.24.0"
trait-variant.workspace = true

dashmap   = "6.1.0"
hostname  = "0.4"
regex     = "1.12.2"
thiserror = { workspace = true }

reqwest         = { version = "0.13", features = ["blocking", "json"] }
url             = "2.5.8"
form_urlencoded = "1.2.2"

uuid           = { workspace = true }
cheetah-string = { workspace = true }

opentelemetry = { workspace = true }

[dev-dependencies]
mockall   = "0.14.0"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name    = "delete_property"
harness = false

[[bench]]
name    = "perm_name"
harness = false

[[bench]]
name    = "json_utils_comparison"
harness = false
