[package]
name                   = "rocketmq-dashboard"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords               = ["dashboard", "rocketmq", "gpui", "gui"]
categories             = ["development-tools", "gui"]
readme                 = "README.md"
description            = "A RocketMQ Dashboard GUI implemented based on gpui"
rust-version.workspace = true

[dependencies]
gpui = { version = "0.2.2" }
gpui-component = { version = "0.5.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

# For logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# For theme and styling
smallvec = { workspace = true }

# Fix core-graphics version conflict on macOS
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "=0.25.0"
core-text = "=21.0.0"

[build-dependencies]
anyhow = { workspace = true }
