[workspace]
members = [
    "rocketmq-dashboard-common",
    "rocketmq-dashboard-gpui",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
authors = ["mxsm <mxsm@apache.org>"]
edition = "2021"
homepage = "https://github.com/mxsm/rocketmq-rust"
repository = "https://github.com/mxsm/rocketmq-rust"
license = "MIT OR Apache-2.0"
keywords = [
    "apache-rocketmq",
    "rocketmq-rust",
    "rocketmq-rs",
    "rust",
    "dashboard",
]
categories = ["development-tools", "gui"]
readme = "README.md"
description = """
RocketMQ Dashboard implementations
"""
rust-version = "1.85.0"

[workspace.dependencies]
# RocketMQ dependencies (from parent workspace)
rocketmq-common = { version = "0.8.0", path = "../rocketmq-common" }
rocketmq-client-rust = { version = "0.8.0", path = "../rocketmq-client" }
rocketmq-remoting = { version = "0.8.0", path = "../rocketmq-remoting" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
