[package]
name                   = "rocketmq-example"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
readme                 = "README.md"
description.workspace  = true
rust-version.workspace = true

[dependencies]

[[example]]
name = "pop-consumer"
path = "examples/consumer/pop_consumer.rs"

[dev-dependencies]
cheetah-string       = { workspace = true }
rocketmq-client-rust = { workspace = true }
rocketmq-common      = { workspace = true }
rocketmq-error       = { workspace = true }
rocketmq-rust        = { workspace = true }
rocketmq-tools       = { workspace = true }
tokio                = { workspace = true }

tracing.workspace = true
