# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name                   = "rocketmq-filter"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords               = ["filter", "rocketmq", "tag", "sql"]
categories             = ["development-tools", "network-programming", "asynchronous"]
readme.workspace       = true
description            = "A filter for RocketMQ messages"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#json spupport
serde.workspace = true
cheetah-string  = { workspace = true }
rocketmq-common = { workspace = true }
rocketmq-error  = { workspace = true }
ahash           = "0.8"
dashmap         = "6.1"

[dev-dependencies]
serde_json.workspace = true
