[package]
name                   = "rocketmq-macros"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
readme                 = "README.md"
description.workspace  = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn         = "2.0"
quote       = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
# Temporarily disabled for publishing - these crates are not yet published as v0.7.0
# cheetah-string = { workspace = true }
# rocketmq-error = { workspace = true }
# rocketmq-remoting = { workspace = true }
# rocketmq-macros = { workspace = true }  # Removed: proc-macro crates cannot depend on themselves
