# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name                   = "rocketmq-macros"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
readme                 = "README.md"
description.workspace  = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn         = "2.0"
quote       = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
# Temporarily disabled for publishing - these crates are not yet published as v0.7.0
# cheetah-string = { workspace = true }
# rocketmq-error = { workspace = true }
# rocketmq-remoting = { workspace = true }
# rocketmq-macros = { workspace = true }  # Removed: proc-macro crates cannot depend on themselves
