[package]
name = "rocketmq-namesrv"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Rust implementation of Apache rocketmq name sever"
keywords = ["rocketmq", "rust", "name-server"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocketmq-rust = { workspace = true }
rocketmq-common = { workspace = true }
rocketmq-remoting = { workspace = true }
rocketmq-runtime = { workspace = true }



anyhow.workspace = true

tokio.workspace = true

tracing.workspace = true


#json spupport
serde.workspace = true
serde_json.workspace = true

config.workspace = true
parking_lot.workspace = true

clap = { version = "4.5.21", features = ["derive"] }
cheetah-string = { workspace = true }
[[bin]]
name = "rocketmq-namesrv-rust"
path = "src/bin/namesrv_bootstrap_server.rs"