# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name                   = "rocketmq-namesrv"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
description            = "Rust implementation of Apache rocketmq name sever"
keywords               = ["rocketmq", "rust", "name-server"]
readme                 = "README.md"
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocketmq-rust     = { workspace = true }
rocketmq-common   = { workspace = true }
rocketmq-remoting = { workspace = true }
rocketmq-error    = { workspace = true }


anyhow.workspace = true

tokio.workspace = true

tracing.workspace = true


#json spupport
serde.workspace = true

config.workspace      = true
parking_lot.workspace = true
dashmap               = { version = "6.1.0", features = ["serde"] }
hashbrown             = "0.16"

clap           = { version = "4.5.60", features = ["derive"] }
cheetah-string = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports", "async_futures"] }
futures   = "0.3"

[[bin]]
name = "rocketmq-namesrv-rust"
path = "src/bin/namesrv_bootstrap_server.rs"

[[bench]]
name    = "route_manager_benchmark"
harness = false

[[bench]]
name    = "route_concurrency_bench"
harness = false

[[bench]]
name    = "async_segmented_lock_bench"
harness = false
