[package]
name                   = "rocketmq-proxy"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
description.workspace  = true
rust-version.workspace = true

[dependencies]
