# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name                   = "rocketmq-proxy"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords               = ["rocketmq", "proxy", "grpc", "messaging", "async"]
categories             = ["network-programming", "asynchronous"]
readme                 = "README.md"
description            = "RocketMQ Proxy Module - gRPC proxy runtime for the Rust implementation"
rust-version.workspace = true

[dependencies]
rocketmq-common   = { workspace = true }
rocketmq-broker   = { workspace = true }
rocketmq-store    = { workspace = true }
rocketmq-error    = { workspace = true }
rocketmq-remoting = { workspace = true }
rocketmq-client-rust = { workspace = true }
rocketmq-auth = { workspace = true, features = ["grpc"] }
rocketmq-rust = { workspace = true }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
tokio-util   = { workspace = true }

serde  = { workspace = true }
config = { workspace = true }

dashmap        = { workspace = true }
bytes          = { workspace = true }
tracing        = { workspace = true }
futures        = { workspace = true }
uuid           = { workspace = true }
cheetah-string = { workspace = true }
thiserror      = { workspace = true }

async-trait = "0.1"
prost       = "0.14"
prost-types = "0.14"
tonic       = { version = "0.14.5", features = ["transport", "codegen"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14.5"

[dev-dependencies]
hex = "0.4"
hmac = "0.13.0"
sha1 = "0.11"
