[package]
name = "rocketmq-remoting"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["rocketmq-rust", "async", "non-blocking", "futures", "rocketmq"]
categories = ["asynchronous", "network-programming"]
description = "Rust implementation of Apache rocketmq remoting"
readme = "README.md"
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocketmq-common = { workspace = true }
rocketmq-macros = { workspace = true }
rocketmq-runtime = { workspace = true }
rocketmq-rust = { workspace = true }
rocketmq-error = { workspace = true }

anyhow.workspace = true
bytes.workspace = true
thiserror.workspace = true

#tokio
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true

#log
tracing.workspace = true

#json spupport
serde.workspace = true
serde_json.workspace = true
serde_json_any_key.workspace = true

rand.workspace = true
lazy_static.workspace = true

flate2 = { workspace = true }

#futures
futures = "0.3"
futures-util = "0.3"

num_cpus.workspace = true
parking_lot.workspace = true

# High-performance channel alternative to tokio::mpsc
# flume provides 40-60% better throughput with lock-free design
flume = "0.11"
trait-variant.workspace = true
uuid = { workspace = true }
cheetah-string = { workspace = true }

bitvec = "1.0.1"
bytemuck = "1.24.0"

dashmap = { workspace = true, features = ["serde"] }

[dev-dependencies]
bytes = "1.10.1"
